--- a/index.html
+++ b/index.html
@@ -2,226 +2,198 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="src/css/main.css">
-  <link rel="stylesheet" href="/src/css/normalize.css">
-  <title>Smashing Magazine</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="src/css/main.css">
+    <link rel="stylesheet" href="/src/css/normalize.css">
+    <title>Smashing Magazine</title>
 </head>
 
 <body>
-  <main>
-    <div class="wrapper">
-      <header>
-        <div class="header-div">
-          <div class="logo">
-            <h3>Smashing Magazine</h3>
-          </div>
-          <div class="articles">
-            <h3>Articles</h3>
-            <h6>Design & development</h6>
-          </div>
-          <div class="books">
-            <h3>Books</h3>
-            <h6>Physical & digital books</h6>
-          </div>
-          <div class="events">
-            <h3>Events</h3>
-            <h6>Conferences & workshops</h6>
-          </div>
-          <div class="jobs">
-            <h3>Jobs</h3>
-            <h6>Find work & employment</h6>
-          </div>
-          <div class="membership">
-            <h3>Membership</h3>
-            <h6>Webinars & early-birds</h6>
-          </div>
-          <div class="topics">
-            <h3>Topics</h3>
-          </div>
-        </div>
-      </header>
-      <div class="first-section">
-        <!-- <div class="first-float">
+    <main>
+        <div class="wrapper">
+            <header>
+                <div class="header-div">
+                    <div class="logo">
+                        <h3>Smashing Magazine</h3>
+                    </div>
+                    <div class="articles">
+                        <h3>Articles</h3>
+                        <h6>Design & development</h6>
+                    </div>
+                    <div class="books">
+                        <h3>Books</h3>
+                        <h6>Physical & digital books</h6>
+                    </div>
+                    <div class="events">
+                        <h3>Events</h3>
+                        <h6>Conferences & workshops</h6>
+                    </div>
+                    <div class="jobs">
+                        <h3>Jobs</h3>
+                        <h6>Find work & employment</h6>
+                    </div>
+                    <div class="membership">
+                        <h3>Membership</h3>
+                        <h6>Webinars & early-birds</h6>
+                    </div>
+                    <div class="topics">
+                        <h3>Topics</h3>
+                    </div>
+                </div>
+            </header>
+            <div class="first-section">
+                <!-- <div class="first-float">
           <p>Don’t Miss These Latest Articles</p>
         </div> -->
-        <div class="content">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic saepe fugiat quae. Accusamus nobis atque
-            excepturi vitae dolorem non, placeat libero qui nihil dicta voluptatibus. Eligendi possimus aut perspiciatis
-            iure.
-          </p>
+                <div class="content">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic saepe fugiat quae. Accusamus nobis atque excepturi vitae dolorem non, placeat libero qui nihil dicta voluptatibus. Eligendi possimus aut perspiciatis iure.
+                    </p>
+                </div>
+                <div class="content">
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste dolorem quidem placeat similique consequuntur adipisci saepe voluptates illo, enim, ad quis totam suscipit eius illum reiciendis eos sint vero minima.</p>
+                </div>
+                <div class="content">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni ullam aspernatur molestiae mollitia deleniti? Porro nemo accusamus officiis, quas a nam blanditiis numquam voluptas, laboriosam aliquid deleniti quia? Ipsa, voluptate.</p>
+                </div>
+                <div class="content">
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae, voluptates consequuntur maxime mollitia, architecto laborum cum laboriosam ipsam, ut impedit perferendis neque. Quam voluptas minus eligendi magnam! Hic, aliquid perspiciatis!</p>
+                </div>
+            </div>
+            <div class="latest-posts">
+                <div class="latest-post-items item1">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est facere libero enim voluptas quam.</p>
+                </div>
+                <div class="latest-post-items item2">
+                    <ul>
+                        <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
+                        <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
+                        <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
+                    </ul>
+                </div>
+                <div class="latest-post-items item3">
+
+                </div>
+            </div>
+            <div class="community">
+                <div class="child1">
+                    <p>6 days ago</p>
+                    <p class="community-title">Editorial Design Patterns With CSS Grid And Named Columns</p>
+                    <p class="community-author">By Rachel Andrew</p>
+                    <p>By naming lines when setting up our CSS Grid layouts, we can tap into some interesting and useful features of Grid — features that become even more powerful when we introduce subgrids.</p>
+                </div>
+                <div class="child2">
+                    <p>6 days ago</p>
+                    <p class="community-title">Editorial Design Patterns With CSS Grid And Named Columns</p>
+                    <p class="community-author">By Rachel Andrew</p>
+                    <p>By naming lines when setting up our CSS Grid layouts, we can tap into some interesting and useful features of Grid — features that become even more powerful when we introduce subgrids.</p>
+                </div>
+                <div class="child3">
+                    <p>6 days ago</p>
+                    <p class="community-title">Editorial Design Patterns With CSS Grid And Named Columns</p>
+                    <p class="community-author">By Rachel Andrew</p>
+                    <p>By naming lines when setting up our CSS Grid layouts, we can tap into some interesting and useful features of Grid — features that become even more powerful when we introduce subgrids.</p>
+                </div>
+                <div class="child4">
+
+                </div>
+                <div class="child5">
+                    <div class="community-box-child">
+
+                    </div>
+                </div>
+                <div class="child6">
+                    <p>6 days ago</p>
+                    <p class="community-title">Editorial Design Patterns With CSS Grid And Named Columns</p>
+                    <p class="community-author">By Rachel Andrew</p>
+                    <p>By naming lines when setting up our CSS Grid layouts, we can tap into some interesting and useful features of Grid — features that become even more powerful when we introduce subgrids.</p>
+                </div>
+                <div class="child7">
+                    <p>6 days ago</p>
+                    <p class="community-title">Editorial Design Patterns With CSS Grid And Named Columns</p>
+                    <p class="community-author">By Rachel Andrew</p>
+                    <p>By naming lines when setting up our CSS Grid layouts, we can tap into some interesting and useful features of Grid — features that become even more powerful when we introduce subgrids.</p>
+                </div>
+                <div class="child8">
+                    <p>6 days ago</p>
+                    <p class="community-title">Editorial Design Patterns With CSS Grid And Named Columns</p>
+                    <p class="community-author">By Rachel Andrew</p>
+                    <p>By naming lines when setting up our CSS Grid layouts, we can tap into some interesting and useful features of Grid — features that become even more powerful when we introduce subgrids.</p>
+                </div>
+                <div class="child9">
+                    <p>6 days ago</p>
+                    <p class="community-title">Editorial Design Patterns With CSS Grid And Named Columns</p>
+                    <p class="community-author">By Rachel Andrew</p>
+                    <p>By naming lines when setting up our CSS Grid layouts, we can tap into some interesting and useful features of Grid — features that become even more powerful when we introduce subgrids.</p>
+                </div>
+                <div class="child10">
+                    <div class="community-box-child">
+
+                    </div>
+                </div>
+            </div>
+            <div class="green-jumbotron">
+                <p>Coming Up Next July 24-26</p>
+
+                <p class="community-title">Smashing Magazine Print #1: Ethics & Privacy</p>
+
+                <p class="community-author">Meet our new printed magazine, explore topics that will make us all think,<br> and will remain useful as time passes by. Friendly, practical and approachable</p>
+
+                <p>Shipping now</p>
+
+                <div class="community-box-child">
+
+                </div>
+            </div>
         </div>
-        <div class="content">
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste dolorem quidem placeat similique
-            consequuntur adipisci saepe voluptates illo, enim, ad quis totam suscipit eius illum reiciendis eos sint
-            vero minima.</p>
+        <div class="more-links">
+            <a href="#">More Links on twitter</a>
         </div>
-        <div class="content">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni ullam aspernatur molestiae mollitia
-            deleniti? Porro nemo accusamus officiis, quas a nam blanditiis numquam voluptas, laboriosam aliquid deleniti
-            quia? Ipsa, voluptate.</p>
+        <div class="center-section contents">
+            <h6>Featured smashing Book</h6>
+            <a href="#">Design Systems</a>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+            </p>
+            <input type="button" value="Table Of Contents">
         </div>
-        <div class="content">
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae, voluptates consequuntur maxime mollitia,
-            architecto laborum cum laboriosam ipsam, ut impedit perferendis neque. Quam voluptas minus eligendi magnam!
-            Hic, aliquid perspiciatis!</p>
+        <div class="curated">
+            <div class="one">
+
+            </div>
+            <div class="two">
+
+            </div>
+            <div class="three">
+
+            </div>
+            <div class="four">
+
+            </div>
         </div>
-      </div>
-      <div class="latest-posts">
-        <div class="latest-post-items item1">
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est facere libero enim voluptas quam.</p>
-        </div>
-        <div class="latest-post-items item2">
-          <ul>
-            <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
-            <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
-            <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
-          </ul>
-        </div>
-        <div class="latest-post-items item3">
+        <div class="newsletter">
 
         </div>
-      </div>
-
-      <!-- <div class="second-section right">
-        <a href="#"><img src="" alt=""></a>
-        <a href="#"></a>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. <a href="#">Join the family</a>
-        </p>
-        <input type="button" value="Explore features ->">
-      </div>
-      <div class="days-ago four">
-        <h6>9 Days ago</h6>
-        <a href="#">Editorial Design Patterns With CSS Grid And Named Columns</p></a>
-        <a href="#">By Rachel Andrew</a>\
-        <p>By naming lines when setting up our CSS Grid layouts, we can tap into some interesting and useful features of
-          Grid — features that become even more powerful when we introduce subgrids.</p>
-        <div class="arrow">
-          ->
-        </div>
-        <div class="days-ago five">
-          <h6>9 Days ago</h6>
-          <a href="#">Editorial Design Patterns With CSS Grid And Named Columns</p></a>
-          <a href="#">By Rachel Andrew</a>\
-          <p>By naming lines when setting up our CSS Grid layouts, we can tap into some interesting and useful features
-            of Grid — features that become even more powerful when we introduce subgrids.</p>
-          <div class="arrow">
-            ->
-          </div>
-        </div>
-      </div>
-      <div class="second-section left">
-        <div class="days-ago six">
-          <h6>9 Days ago</h6>
-          <a href="#">Editorial Design Patterns With CSS Grid And Named Columns</p></a>
-          <a href="#">By Rachel Andrew</a>\
-          <p>By naming lines when setting up our CSS Grid layouts, we can tap into some interesting and useful features
-            of Grid — features that become even more powerful when we introduce subgrids.</p>
-          <div class="arrow">
-            ->
-          </div>
-        </div>
-        <div class="days-ago seven">
-          <h6>9 Days ago</h6>
-          <a href="#">Editorial Design Patterns With CSS Grid And Named Columns</p></a>
-          <a href="#">By Rachel Andrew</a>\
-          <p>By naming lines when setting up our CSS Grid layouts, we can tap into some interesting and useful features
-            of Grid — features that become even more powerful when we introduce subgrids.</p>
-          <div class="arrow">
-            ->
-          </div>
-        </div>
-        <a href="#"><img src="" alt=""></a>
-        <a href="#"></a>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. <a href="#">Join the family</a>
-        </p>
-        <input type="button" value="Explore features ->">
-      </div>
-      <div></div>
-    </div>
-    <div class="above-green">
-      <a href="#">See all latest articles</a>
-    </div>
-    <div class="center-section green">
-      
-    </div> -->
-      <div class="community">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-      </div>
-      <div class="green-jumbotron">
-        <div class="green-header">
-          <p>Coming Up Next July 24-26</p>
-        </div>
-        <div class="green-links">
-          <a href="#">Smashing Magazine Print #1: Ethics & Privacy</a>
-          <p>Meet our new printed magazine, explore topics that will make us all think, and will remain useful as time
-            passes by. Friendly, practical and approachable</p>
-          <a href="#">Shipping now</a>
-          <input type="button" value="Download a free PDF preview ->">
-          <a href="#"><img src="" alt=""></a>
-        </div>
-      </div>
-      <div class="more-links">
-        <a href="#">More Links on twitter</a>
-      </div>
-      <div class="center-section contents">
-        <h6>Featured smashing Book</h6>
-        <a href="#">Design Systems</a>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-          consequat.
-        </p>
-        <input type="button" value="Table Of Contents">
-      </div>
-      <div class="curated">
-        <div class="one">
+        <div class="see-articles">
 
         </div>
-        <div class="two">
+        <div class="footer">
+            <div class="footer-header">
+
+            </div>
+            <div class="footer-links options">
+
+            </div>
+            <div class="footer-links about-us">
+
+            </div>
+            <div class="footer-links contact-us">
+
+            </div>
 
         </div>
-        <div class="three">
-
         </div>
-        <div class="four">
-
-        </div>
-      </div>
-      <div class="newsletter">
-
-      </div>
-      <div class="see-articles">
-
-      </div>
-      <div class="footer">
-        <div class="footer-header">
-
-        </div>
-        <div class="footer-links options">
-
-        </div>
-        <div class="footer-links about-us">
-
-        </div>
-        <div class="footer-links contact-us">
-
-        </div>
-
-      </div>
-    </div>
-  </main>
+    </main>
 </body>
 
 </html>
