Adding some content to the HTML and styled the person of the week section

--- a/index.html
+++ b/index.html
@@ -48,22 +48,31 @@
           <p>Don’t Miss These Latest Articles</p>
         </div> -->
                 <div class="content">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic saepe fugiat quae. Accusamus nobis atque excepturi vitae dolorem non, placeat libero qui nihil dicta voluptatibus. Eligendi possimus aut perspiciatis iure.
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic saepe fugiat quae. Accusamus nobis
+                        atque excepturi vitae dolorem non, placeat libero qui nihil dicta voluptatibus. Eligendi
+                        possimus aut perspiciatis iure.
                     </p>
                 </div>
                 <div class="content">
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste dolorem quidem placeat similique consequuntur adipisci saepe voluptates illo, enim, ad quis totam suscipit eius illum reiciendis eos sint vero minima.</p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste dolorem quidem placeat similique
+                        consequuntur adipisci saepe voluptates illo, enim, ad quis totam suscipit eius illum reiciendis
+                        eos sint vero minima.</p>
                 </div>
                 <div class="content">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni ullam aspernatur molestiae mollitia deleniti? Porro nemo accusamus officiis, quas a nam blanditiis numquam voluptas, laboriosam aliquid deleniti quia? Ipsa, voluptate.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni ullam aspernatur molestiae
+                        mollitia deleniti? Porro nemo accusamus officiis, quas a nam blanditiis numquam voluptas,
+                        laboriosam aliquid deleniti quia? Ipsa, voluptate.</p>
                 </div>
                 <div class="content">
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae, voluptates consequuntur maxime mollitia, architecto laborum cum laboriosam ipsam, ut impedit perferendis neque. Quam voluptas minus eligendi magnam! Hic, aliquid perspiciatis!</p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae, voluptates consequuntur maxime
+                        mollitia, architecto laborum cum laboriosam ipsam, ut impedit perferendis neque. Quam voluptas
+                        minus eligendi magnam! Hic, aliquid perspiciatis!</p>
                 </div>
             </div>
             <div class="latest-posts">
                 <div class="latest-post-items item1">
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est facere libero enim voluptas quam.</p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est facere libero enim voluptas quam.
+                    </p>
                 </div>
                 <div class="latest-post-items item2">
                     <ul>
@@ -81,19 +90,22 @@
                     <p>6 days ago</p>
                     <p class="community-title">Editorial Design Patterns With CSS Grid And Named Columns</p>
                     <p class="community-author">By Rachel Andrew</p>
-                    <p>By naming lines when setting up our CSS Grid layouts, we can tap into some interesting and useful features of Grid — features that become even more powerful when we introduce subgrids.</p>
+                    <p>By naming lines when setting up our CSS Grid layouts, we can tap into some interesting and useful
+                        features of Grid — features that become even more powerful when we introduce subgrids.</p>
                 </div>
                 <div class="child2">
                     <p>6 days ago</p>
                     <p class="community-title">Editorial Design Patterns With CSS Grid And Named Columns</p>
                     <p class="community-author">By Rachel Andrew</p>
-                    <p>By naming lines when setting up our CSS Grid layouts, we can tap into some interesting and useful features of Grid — features that become even more powerful when we introduce subgrids.</p>
+                    <p>By naming lines when setting up our CSS Grid layouts, we can tap into some interesting and useful
+                        features of Grid — features that become even more powerful when we introduce subgrids.</p>
                 </div>
                 <div class="child3">
                     <p>6 days ago</p>
                     <p class="community-title">Editorial Design Patterns With CSS Grid And Named Columns</p>
                     <p class="community-author">By Rachel Andrew</p>
-                    <p>By naming lines when setting up our CSS Grid layouts, we can tap into some interesting and useful features of Grid — features that become even more powerful when we introduce subgrids.</p>
+                    <p>By naming lines when setting up our CSS Grid layouts, we can tap into some interesting and useful
+                        features of Grid — features that become even more powerful when we introduce subgrids.</p>
                 </div>
                 <div class="child4">
 
@@ -107,25 +119,29 @@
                     <p>6 days ago</p>
                     <p class="community-title">Editorial Design Patterns With CSS Grid And Named Columns</p>
                     <p class="community-author">By Rachel Andrew</p>
-                    <p>By naming lines when setting up our CSS Grid layouts, we can tap into some interesting and useful features of Grid — features that become even more powerful when we introduce subgrids.</p>
+                    <p>By naming lines when setting up our CSS Grid layouts, we can tap into some interesting and useful
+                        features of Grid — features that become even more powerful when we introduce subgrids.</p>
                 </div>
                 <div class="child7">
                     <p>6 days ago</p>
                     <p class="community-title">Editorial Design Patterns With CSS Grid And Named Columns</p>
                     <p class="community-author">By Rachel Andrew</p>
-                    <p>By naming lines when setting up our CSS Grid layouts, we can tap into some interesting and useful features of Grid — features that become even more powerful when we introduce subgrids.</p>
+                    <p>By naming lines when setting up our CSS Grid layouts, we can tap into some interesting and useful
+                        features of Grid — features that become even more powerful when we introduce subgrids.</p>
                 </div>
                 <div class="child8">
                     <p>6 days ago</p>
                     <p class="community-title">Editorial Design Patterns With CSS Grid And Named Columns</p>
                     <p class="community-author">By Rachel Andrew</p>
-                    <p>By naming lines when setting up our CSS Grid layouts, we can tap into some interesting and useful features of Grid — features that become even more powerful when we introduce subgrids.</p>
+                    <p>By naming lines when setting up our CSS Grid layouts, we can tap into some interesting and useful
+                        features of Grid — features that become even more powerful when we introduce subgrids.</p>
                 </div>
                 <div class="child9">
                     <p>6 days ago</p>
                     <p class="community-title">Editorial Design Patterns With CSS Grid And Named Columns</p>
                     <p class="community-author">By Rachel Andrew</p>
-                    <p>By naming lines when setting up our CSS Grid layouts, we can tap into some interesting and useful features of Grid — features that become even more powerful when we introduce subgrids.</p>
+                    <p>By naming lines when setting up our CSS Grid layouts, we can tap into some interesting and useful
+                        features of Grid — features that become even more powerful when we introduce subgrids.</p>
                 </div>
                 <div class="child10">
                     <div class="community-box-child">
@@ -138,7 +154,8 @@
 
                 <p class="community-title">Smashing Magazine Print #1: Ethics & Privacy</p>
 
-                <p class="community-author">Meet our new printed magazine, explore topics that will make us all think,<br> and will remain useful as time passes by. Friendly, practical and approachable</p>
+                <p class="community-author">Meet our new printed magazine, explore topics that will make us all
+                    think,<br> and will remain useful as time passes by. Friendly, practical and approachable</p>
 
                 <p>Shipping now</p>
 
@@ -147,15 +164,139 @@
                 </div>
             </div>
         </div>
-        <div class="more-links">
-            <a href="#">More Links on twitter</a>
+        <!--  -->
+        <div class="person-of-the-week">
+            <div>
+                <div class="picture"></div>
+            </div>
+            <div class="persons-achievements">
+                <h3>Person of the week</h3>
+                <p>Based in Mexico City, Pablo Stanley (@pablostanley) is a lead designer for InVision Studio Platform
+                    and co-founder of
+                    the tech-enabled healthcare provider Carbon Health. He shares his design knowledge as a speaker at
+                    events around the
+                    world, as well as in one-on-one workshops and in his design tutorials on YouTube. Advocating for
+                    more diversity in the
+                    design community and with the aim to inspire students and professionals from Latin America to pursue
+                    a career in design,
+                    Pablo co-hosts the podcast Diseño Cha Cha Chá where Spanish-speaking creatives talk about their work
+                    in the tech
+                    industry. When he’s not doing any of this, Pablo loves to draw comics. Thank you for everything you
+                    do for the design
+                    community, dear Pablo!</p>
+            </div>
         </div>
+
+        <div class="other-persons">
+            <div class="item article1">
+                <div>
+                    <div class="photo"></div>
+                </div>
+                <div class="article">
+                    <h3>George Kvasnikov wrote</h3>
+                    <h4> Minimalist Video Player</h4>
+                    <p>october 9, 2019 — If you’re looking for a sleek web video player without branding and quality
+                        loss,
+                        OneLinePlayer is for
+                        you. Created by George Kvasnikov and Dmitry Kiselev, it supports videos from Vimeo and Dropbox.
+                    </p>
+
+                </div>
+            </div>
+            <div class="item article2">
+                <div>
+                    <div class="photo"></div>
+                </div>
+                <div class="article">
+                    <h3>George Kvasnikov wrote</h3>
+                    <h4> Minimalist Video Player</h4>
+                    <p>october 9, 2019 — If you’re looking for a sleek web video player without branding and quality
+                        loss,
+                        OneLinePlayer is for
+                        you. Created by George Kvasnikov and Dmitry Kiselev, it supports videos from Vimeo and Dropbox.
+                    </p>
+
+                </div>
+            </div>
+            <div class="item article3">
+                <div>
+                    <div class="photo"></div>
+                </div>
+                <div class="article">
+                    <h3>George Kvasnikov wrote</h3>
+                    <h4> Minimalist Video Player</h4>
+                    <p>october 9, 2019 — If you’re looking for a sleek web video player without branding and quality
+                        loss,
+                        OneLinePlayer is for
+                        you. Created by George Kvasnikov and Dmitry Kiselev, it supports videos from Vimeo and Dropbox.
+                    </p>
+
+                </div>
+            </div>
+            <div class="item article4">
+                <div>
+                    <div class="photo"></div>
+                </div>
+                <div class="article">
+                    <h3>George Kvasnikov wrote</h3>
+                    <h4> Minimalist Video Player</h4>
+                    <p>october 9, 2019 — If you’re looking for a sleek web video player without branding and quality
+                        loss,
+                        OneLinePlayer is for
+                        you. Created by George Kvasnikov and Dmitry Kiselev, it supports videos from Vimeo and Dropbox.
+                    </p>
+
+                </div>
+            </div>
+            <div class="item article5">
+                <div>
+                    <div class="photo"></div>
+                </div>
+                <div class="article">
+                    <h3>George Kvasnikov wrote</h3>
+                    <h4> Minimalist Video Player</h4>
+                    <p>october 9, 2019 — If you’re looking for a sleek web video player without branding and quality
+                        loss,
+                        OneLinePlayer is for
+                        you. Created by George Kvasnikov and Dmitry Kiselev, it supports videos from Vimeo and Dropbox.
+                    </p>
+
+                </div>
+            </div>
+            <div class="item article6">
+                <div>
+                    <div class="photo"></div>
+                </div>
+                <div class="article">
+                    <h3>George Kvasnikov wrote</h3>
+                    <h4> Minimalist Video Player</h4>
+                    <p>october 9, 2019 — If you’re looking for a sleek web video player without branding and quality
+                        loss,
+                        OneLinePlayer is for
+                        you. Created by George Kvasnikov and Dmitry Kiselev, it supports videos from Vimeo and Dropbox.
+                    </p>
+
+                </div>
+            </div>
+        </div>
+        <!--  -->
         <div class="center-section contents">
-            <h6>Featured smashing Book</h6>
-            <a href="#">Design Systems</a>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            </p>
-            <input type="button" value="Table Of Contents">
+            <div style="display: flex; flex-direction: column;">
+                <h6>Featured smashing Book</h6>
+                <a href="#">Design Systems</a>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et
+                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip
+                    ex ea commodo consequat.
+                </p>
+                <div>
+                    <div class="table-of-content"></div>
+                </div>
+            </div>
+            <div>
+                <div class="book"></div>
+            </div>
         </div>
         <div class="curated">
             <div class="one">
