started working on footer lists

--- a/index.html
+++ b/index.html
@@ -318,11 +318,11 @@
         </div>
         <!-- smashing section end-->
         <div class="footer">
-            <div class="footer-header">
-                <h3>Browse all smashing magazine topics</h3>
-            </div>
+            <span class="footer-span">
+                Browse all smashing magazine topics
+            </span>
             <div class="footer-links-options">
-                <ul class="grid">
+                <ul>
                     <li>Accessibility</li>
                     <li>Androids</li>
                     <li>Animations</li>
